# bayou-fe

./: .gitignore  Cargo.toml  README.md  index.html  shell.nix
src/: lib.rs  main copy.rs  main.rs  not_found.rs  state.rs
src/api/: mod.rs
src/api/masto_api/: accounts.rs  statuses.rs  timelines.rs
src/api/masto_types/: account.rs  custom_emoji.rs  oauth.rs
src/api/methods/: mod.rs  request_err.rs
src/api/oauth/: application.rs  mod.rs  scopes.rs
src/api/types/: api_community.rs  api_message.rs  api_user.rs  auth_err.rs  auth_token.rs  info_with_token.rs  login_err.rs  login_request.rs  message_info.rs  (+8 more)
src/components/: comm_rooms.rs  communities.rs  login_protect.rs  mod.rs  registering.rs  time.rs  unimplimented.rs  username.rs
src/masto_api/: accounts.rs  mod.rs  statuses.rs  timelines.rs  webfinger.rs
src/masto_types/: account.rs  application.rs  custom_emoji.rs  mod.rs  oauth.rs  poll.rs  serde_fns.rs  status.rs  timeline_item.rs
src/routes/: app_routes.rs  auth_routes.rs  comm_routes.rs  login.rs  mod.rs  personal_routes.rs  room_routes.rs  signup.rs
src/status/: attachment_gallery.rs  mod.rs  post.rs  status_page.rs
src/timeline/: feed.rs  loader.rs  mod.rs  post.rs  segments.rs  source.rs
src/user_profile/: profile.rs
styling/: _attachments.scss  _markdown.scss  _profile.scss  _status.scss  _theme.scss  _timeline.scss  attachments.css  attachments.css.map  attachments.scss  content_warning.css  content_warning.css.map  content_warning.scss  styles.css  styles.css.map  styles.scss  theme.scss  timeline.css  timeline.css.map  timeline.scss
(+39 files in other folders)
