[package]
name = "bayou-fe"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
gloo-console = "0.3.0"
gloo-net = "0.6.0"
leptos = {version = "0.7.0", features = ["csr"]}
leptos-lucide-icons = "0.1.1"
leptos-use = {version = "0.14.0", features = ["use_scroll"]}
# leptos_lucide = "0.1.1"
leptos_router = { version = "0.7.0" }
regex = "1.11.1"
serde = "1.0.214"
serde_json = "1.0.132"
url = {version = "2.5.3", features = ["serde"]}
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
wasm-logger = "0.2.0"
web-sys = "0.3.72"
