[package]
name = "bayou-fe"
version = "0.1.0"
edition = "2021"

[dependencies]
codes-iso-639 = "0.1.5"
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
leptos = { version = "0.8.0", features = ["csr"] }
leptos_router = "0.8.0"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["serde"] }
